<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="4dip" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        />

    <TextView
        android:id="@+id/idtxtContactAgronomist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pleaseEnterYourMessage" />


    <EditText
        android:id="@+id/idfieldContactAgronomist"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:lines="6"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:scrollHorizontally="false" />


    <Button
        android:id="@+id/saveBtnContactAgronomist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />


</LinearLayout>