<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="ContactAgronomist">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="454dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211">

        <TextView
            android:id="@+id/idtxtContactAgronomist"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:text="@string/pleaseEnterYourMessage" />

        <EditText
            android:id="@+id/idfieldContactAgronomist"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="6"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:src="@drawable/icon"></ImageView>

        <Button
            android:id="@+id/attachPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attachPhoto" />

        <Button
            android:id="@+id/saveBtnContactAgronomist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />


    </LinearLayout>


    <AutoCompleteTextView
        android:id="@+id/conactAgronomistTextView"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:completionThreshold="1"
        android:hint="@string/startTyping"
        android:drawableRight="@drawable/dropdown"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></AutoCompleteTextView>

    <TextView
        android:id="@+id/To"
        android:layout_width="45dp"
        android:layout_height="37dp"
        android:text="@string/to"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />


</androidx.constraintlayout.widget.ConstraintLayout>