<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ListView
        android:id="@+id/seedInventory"
        android:textColor="#0d6e6a"
        android:textSize="35dp"
        android:layout_width="370dp"
        android:layout_height="322dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <TextView
        android:id="@+id/SeedInventorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seedInventory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <Button
        android:id="@+id/addNewSeedToInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/addNew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763" />

    <Button
        android:id="@+id/cancelNewSeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="56dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/aproveActionNewSeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="56dp"
        android:text="@string/approve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newSeedAmountEditText"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/newSeedNameEditText"
        android:layout_width="113dp"
        android:layout_height="60dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/newSeedAmountEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newSeedNameTextView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/newSeedAmountEditText"
        android:layout_width="113dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/newSeedNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/newSeedAmountTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/newSeedNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="18dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/newSeedNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/seedInventory" />

    <TextView
        android:id="@+id/newSeedAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="18dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="@+id/newSeedAmountEditText"
        app:layout_constraintTop_toBottomOf="@+id/seedInventory" />

</androidx.constraintlayout.widget.ConstraintLayout>