<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ListView
        android:id="@+id/cropsToSupply"
        android:layout_width="370dp"
        android:layout_height="322dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <TextView
        android:id="@+id/cropsReadyToSupplyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#0d6e6a"
        android:textSize="15dp"
        android:text="@string/readyToSupply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <Button
        android:id="@+id/addNewCropToInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/addNew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <Button
        android:id="@+id/cancelNewCrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="128dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/aproveActionNewCrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="128dp"
        android:text="@string/approve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/newCropNameEditText"
        android:layout_width="113dp"
        android:layout_height="60dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/newCropAmountEditText"
        app:layout_constraintEnd_toStartOf="@+id/newCropAmountEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newCropNameTextView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/newCropAmountEditText"
        android:layout_width="113dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/cancelNewCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newCropNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/newCropAmountTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/newCropNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="18dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/newCropNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/cropsToSupply" />

    <TextView
        android:id="@+id/newCropAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="18dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="@+id/newCropAmountEditText"
        app:layout_constraintTop_toBottomOf="@+id/cropsToSupply" />


</androidx.constraintlayout.widget.ConstraintLayout>