<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            android:weightSum="4" >>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/EditFarmTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/editPlot"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="80dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/setAmountField"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:ems="10"
                            android:inputType="textPersonName" />


                        <Button
                            android:id="@+id/setAmountBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:text="@string/setName" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/plantField"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:ems="10" />

                        <EditText
                            android:id="@+id/plantFieldAmount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:ems="10"
                            android:inputType="textPersonName" />

                        <Button
                            android:id="@+id/plantBtn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.35"
                            android:text="@string/plant" />

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/setDateBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/setDate" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/harvestBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/harvest" />
                </TableRow>
        </TableLayout>








</LinearLayout>